--- a/servers/node/h2gcadmin/views/index.jade
+++ b/servers/node/h2gcadmin/views/index.jade
@@ -1,22 +1,15 @@
 extend layout
 block content
   p
-    | Vivamus hendrerit arcu sed erat molestie
-    | vehicula. Sed auctor neque eu tellus
-    | rhoncus ut eleifend nibh porttitor. Ut in.
+    | First block
   p
-    | Donec congue lacinia dui, a porttitor
-    | lectus condimentum laoreet. Nunc eu
-    | ullamcorper orci. Quisque eget odio ac
-    | lectus vestibulum faucibus eget in metus.
-    | In pellentesque faucibus vestibulum. Nulla
-    | at nulla justo, eget luctus tortor.
+    | Second block
+    | more text
 block sidebar
   .widget
     h1 Widget
     p
-      | Sed auctor neque eu tellus rhoncus ut
-      | eleifend nibh porttitor. Ut in nulla enim.
+      | first sidebar block
     p
-      | Vivamus hendrerit arcu sed erat molestie
-      | vehicula.
+      | second sidebar block
+      | more text
