--- a/servers/node/h2gcadmin/views/layout.jade
+++ b/servers/node/h2gcadmin/views/layout.jade
@@ -1,15 +1,15 @@
 !!! 5
 html(lang+"en")
   head
-    title #{title} - My Site
+    title #{title} - H2GC Log Server
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header
-      h1 My Site
+      h1 H2GC Log Server
     .container
       .main-content
         block content
       .sidebar
         block sidebar
     footer
-      p Running on node with Express, Jade and Stylus
+      p Don't Panic
