--- a/servers/node/h2gcadmin/views/layout.jade
+++ b/servers/node/h2gcadmin/views/layout.jade
@@ -1,11 +1,11 @@
 !!! 5
 html(lang+"en")
   head
-    title #{title} - H2GC Log Server
+    title #{title} - H2GC Notification Server
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header
-      h1 H2GC Log Server
+      h2 H2GC Notification Server
     .container
       .main-content
         block content
@@ -13,3 +13,4 @@ html(lang+"en")
         block sidebar
     footer
       p Don't Panic
+      h1 foobar
