--- a/servers/node/h2gcadmin/public/stylesheets/style.styl
+++ b/servers/node/h2gcadmin/public/stylesheets/style.styl
@@ -17,8 +17,8 @@ global-reset()
  * Store the main color and
  * background color as variables
  */
-main-color = #fa5b4d
-background-color = #faf9f0
+main-color = #000000
+background-color = #fff
 
 body
   font-family 'Georgia'
@@ -41,13 +41,21 @@ header
   text-shadow 0px -1px 0px darken(main-color, 30%)
 
 .container
-  width 500px
+  width 700px
   margin 50px auto
   overflow hidden
 
 .main-content
   float left
-  width 300px
+  width 500px
+
+  h1
+    font-family 'Quicksand'
+    margin 13px 10px 4px
+    padding-bottom 10px
+    border-bottom 1px dotted #ddd
+    border-radius 2px 2px 0px 0px
+    margin-bottom 10px
 
   p
     margin-bottom 20px
