chat function added to client, update docs

--- a/servers/node/h2gcnotify/public/stylesheets/style.styl
+++ b/servers/node/h2gcnotify/public/stylesheets/style.styl
@@ -26,11 +26,20 @@ body
   color #444
 
 header
-  font-family 'Quicksand'
+  font-family: Cantarell, 'Droid Sans', Ubuntu, 'DejaVu Sans', Arial, sans-serif
+  font-size: 14px
+  line-height: 1.6
+  color: #2e3436
   padding 50px 10px
-  color #fff
-  font-size 25px
   text-align center
+
+/*
+*  font-family 'Quicksand'
+*  padding 50px 10px
+*  color #fff
+*  font-size 25px
+*  text-align center
+*/
 
   /*
    * Note the use of the `main-color`
