Fixup node server and client to prep for uservoice integratoion

--- a/servers/node/h2gcnotify/views/layout.jade
+++ b/servers/node/h2gcnotify/views/layout.jade
@@ -1,7 +1,7 @@
 !!! 5
 html(lang+"en")
   head
-    title #{title} - H2GC Notification Server
+    title #{title} - Notification Server Index 
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header
@@ -12,5 +12,5 @@ html(lang+"en")
       .sidebar
         block sidebar
     footer
-      p Don't Panic
+      p It's just the footer - Don't Panic
       
